--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@
           <hr class="border-b-2 border-gray-200">
           <h4 class="text-gray-400 text-center">apples</h4>
           <div class="rating justify-center">
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#F85559]" />
+            <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#F85559]" checked />
+            <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#F85559]" />
+            <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#F85559]" />
+            <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#F85559]" />
           </div>
           <!-- modal 1 -->
           <button class="bg-transparent border-none font-medium text-[#F85559]"
@@ -238,11 +238,11 @@
                     </h4>
                     <p>Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
                     <div class="rating justify-center">
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" checked />
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#F85559]" />
+                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#F85559]" checked />
+                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#F85559]" />
+                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#F85559]" />
+                      <input type="radio" name="rating-1" class="mask mask-star-2 bg-[#F85559]" />
                     </div>
                     <div class="card-actions justify-center">
                       <button class="btn text-[#F85559] bg-transparent border-[#F85559]">Close</button>
@@ -266,11 +266,11 @@
           <hr class="border-b-2 border-gray-200">
           <h4 class="text-gray-400 text-center">Orange</h4>
           <div class="rating justify-center">
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
           </div>
           <!-- modal 2 -->
           <button class="bg-transparent border-none font-medium text-[#F85559]"
@@ -285,11 +285,11 @@
                     </h4>
                     <p>Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
                     <div class="rating justify-center">
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" checked />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-[#F85559]" />
                     </div>
                     <div class="card-actions justify-center">
                       <button class="btn text-[#F85559] bg-transparent border-[#F85559]">Close</button>
@@ -313,11 +313,11 @@
           <hr class="border-b-2 border-gray-200">
           <h4 class="text-gray-400 text-center">Red Dragon</h4>
           <div class="rating justify-center">
-            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" checked />
-            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+            <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" checked />
+            <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+            <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+            <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
           </div>
           <!-- modal 3 -->
           <button class="bg-transparent border-none font-medium text-[#F85559]"
@@ -332,11 +332,11 @@
                     </h4>
                     <p>Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
                     <div class="rating justify-center">
-                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" checked />
-                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" checked />
+                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
+                      <input type="radio" name="rating-3" class="mask mask-star-2 bg-[#F85559]" />
                     </div>
                     <div class="card-actions justify-center">
                       <button class="btn text-[#F85559] bg-transparent border-[#F85559]">Close</button>
@@ -360,11 +360,11 @@
           <hr class="border-b-2 border-gray-200">
           <h4 class="text-gray-400 text-center">Banana</h4>
           <div class="rating justify-center">
-            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" checked />
-            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
-            <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+            <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" checked />
+            <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+            <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+            <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
           </div>
           <!-- modal  -->
           <button class="bg-transparent border-none font-medium text-[#F85559]"
@@ -378,11 +378,11 @@
                     <h4 class="text-black text-4xl font-bold text-center">Banana</h4>
                     <p>Professional employees are there for you to pick the most <br> amazing and fresh fruits.</p>
                     <div class="rating justify-center">
-                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" checked />
-                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
-                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" checked />
+                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
+                      <input type="radio" name="rating-4" class="mask mask-star-2 bg-[#F85559]" />
                     </div>
                     <div class="card-actions justify-center">
                       <button class="btn text-[#F85559] bg-transparent border-[#F85559]">Close</button>
