--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 
     </div>
 
-    <div class="flex hidden justify-center mt-12">
+    <div class="flex  justify-center mt-12">
       <button class=" bg-[#F85559] text-white rounded-xl px-6 py-5  text-xl w-32 ">Shop All</button>
     </div>
 
