--- a/index.html
+++ b/index.html
@@ -420,10 +420,10 @@
                 <div class="pt-7 space-y-3 text-center">
                   <h3 class="text-2xl font-bold">Awlad Hossain</h3>
                   <p>Fruits Expert</p>
-                  <div class="space-x-4">
-                    <a href=""><i class="fa fa-brands fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-brands fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-brands fa-linkedin"></i></a>
+                  <div class="space-x-4 pt-5">
+                    <a class="bg-[#F85559] p-2 rounded-full" href=""><i class="fa fa-brands fa-facebook w-5 "></i></a>
+                    <a class="bg-[#F85559] p-2 rounded-full" href=""><i class="fa fa-brands fa-twitter w-5 "></i></a>
+                    <a class="bg-[#F85559] p-2 rounded-full" href=""><i class="fa fa-brands fa-linkedin w-5 "></i></a>
                   </div>
                 </div>
               </div>
@@ -434,10 +434,10 @@
                 <div class="pt-7 space-y-3 text-center">
                   <h3 class="text-2xl font-bold">Safia Chowdhury</h3>
                   <p>Fruits Expert</p>
-                  <div class="space-x-4">
-                    <a href=""><i class="fa fa-brands fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-brands fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-brands fa-linkedin"></i></a>
+                  <div class="space-x-4 pt-5">
+                    <a class="bg-[#F85559] p-2 rounded-full" href=""><i class="fa fa-brands fa-facebook w-5"></i></a>
+                    <a class="bg-[#F85559] p-2 rounded-full" href=""><i class="fa fa-brands fa-twitter w-5"></i></a>
+                    <a class="bg-[#F85559] p-2 rounded-full" href=""><i class="fa fa-brands fa-linkedin w-5"></i></a>
                   </div>
                 </div>
               </div>
@@ -448,10 +448,10 @@
                 <div class="pt-7 space-y-3 text-center">
                   <h3 class="text-2xl font-bold">Rokib Hossain</h3>
                   <p>Fruits Expert</p>
-                  <div class="space-x-4">
-                    <a href=""><i class="fa fa-brands fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-brands fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-brands fa-linkedin"></i></a>
+                  <div class="space-x-4 pt-5">
+                    <a class="bg-[#F85559] p-2 rounded-full" href=""><i class="fa fa-brands fa-facebook w-5"></i></a>
+                    <a class="bg-[#F85559] p-2 rounded-full" href=""><i class="fa fa-brands fa-twitter w-5"></i></a>
+                    <a class="bg-[#F85559] p-2 rounded-full" href=""><i class="fa fa-brands fa-linkedin w-5"></i></a>
                   </div>
                 </div>
               </div>
@@ -462,10 +462,10 @@
                 <div class="pt-7 space-y-3 text-center">
                   <h3 class="text-2xl font-bold">Chaity</h3>
                   <p>Fruits Expert</p>
-                  <div class="space-x-4">
-                    <a href=""><i class="fa fa-brands fa-facebook "></i></a>
-                    <a href=""><i class="fa fa-brands fa-twitter "></i></a>
-                    <a href=""><i class="fa fa-brands fa-linkedin "></i></a>
+                  <div class="space-x-4 pt-5">
+                    <a class="bg-[#F85559] p-2 rounded-full" href=""><i class="fa fa-brands fa-facebook w-5"></i></a>
+                    <a class="bg-[#F85559] p-2 rounded-full" href=""><i class="fa fa-brands fa-twitter w-5"></i></a>
+                    <a class="bg-[#F85559] p-2 rounded-full" href=""><i class="fa fa-brands fa-linkedin w-5"></i></a>
                   </div>
                 </div>
               </div>
